exercises/networking/cka/04-ingress/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: cka-net-4
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
