exercises/networking/cka/04-ingress/web-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ing
  namespace: cka-net-4
spec:
  ingressClassName: nginx
  rules:
  - host: web.cka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
